Added error handling, injecting api

--- a/src/components/EnterName/EnterName.module.css
+++ b/src/components/EnterName/EnterName.module.css
@@ -15,6 +15,11 @@
     text-align: center;
 }
 
+.container small {
+    color: #dda1a1;
+    margin-top: 1em;
+}
+
 .container p {
     color: white; 
     font-weight: bold;
